# bazel-multilanguage-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-multilanguage_example  bazel-out  bazel-testlogs  go.mod
projects/go_hello_world/: BUILD.bazel
projects/go_web/: BUILD.bazel  main.go
projects/protobuf_demo/: BUILD.bazel  read.cpp  write.cpp
projects/python_calculator/: BUILD.bazel  calculator_test.py
projects/python_web/: BUILD.bazel  main.py
